# eaon-desktop-deb

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Package.swift  README.md  RELEASING-UPDATES.md  build-installer.sh  run.sh  update-manifest.sample.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
AquaChat/: App.swift
AquaChat/Extensions/: Animation+Emil.swift
AquaChat/Resources/: CuratedOllamaModels.json
AquaChat/Services/: AppFonts.swift  AppearanceSettings.swift  AquaAPI.swift  AquaSupportedModels.swift  AttachmentStore.swift  BrandLogoLoader.swift  CodeWorkspace.swift  ContextWindowEstimator.swift  CustomProviderAPI.swift  CustomProviderStore.swift  KeychainService.swift  LocalAI.swift  MessageContentParser.swift  ModelCatalog.swift  ModelPreferencesStore.swift  ModelPricingStore.swift  StatisticsTracker.swift  SystemSpecs.swift  TypewriterStreamController.swift  UpdateChecker.swift  WorkspaceRunner.swift
AquaChat/Theme/: ThemeColors.swift
AquaChat/ViewModels/: ChatViewModel.swift  CompareViewModel.swift
AquaChat/Views/: AppearanceSettingsView.swift  AquaProviderSettingsView.swift  AssistantMessageContentView.swift  BrandLogoView.swift  ChatComposer.swift  ChatHomeView.swift  CodeBlockView.swift  CodeWorkspacePanel.swift  ComposerAttachmentMenu.swift  CustomInstructionsSettingsView.swift  CustomProvidersSettingsView.swift  Dialogs.swift  FeaturePlaceholderView.swift  GeneralSettingsView.swift  LocalProviderSettingsView.swift  MarkdownBlockView.swift  ModelCompareView.swift  ModelLibraryView.swift  ModelListCard.swift  ModelPickerPopover.swift  OnboardingView.swift  PrivacySettingsView.swift  ProjectsView.swift  RootView.swift  SearchPaletteView.swift  SettingsRootView.swift  ShortcutsSettingsView.swift  SidebarView.swift  StatisticsHUDView.swift  StatisticsView.swift  TypingAnimatedText.swift  UpdateBanner.swift
Eaon-desktop/: App.swift
Eaon-desktop/Resources/: CuratedOllamaModels.json
Eaon-desktop/Services/: APIKeyStore.swift  AlwaysAllowStore.swift  AppDataLocation.swift  AquaAPI.swift  AttachmentStore.swift  CodeWorkspace.swift  CustomProviderAPI.swift  (+28 more)
eaon-tauri/: DEBIAN.md  package-lock.json  package.json
eaon-tauri/src-tauri/: Cargo.toml  tauri.conf.json
eaon-tauri/src-tauri/src/: lib.rs
installer/: Eaon.icns  make-icon.swift
(+43 files in other folders)
