[package]
name = "eaon"
version = "1.0.0"
description = "Eaon — desktop AI chat client for Debian, Linux, Windows, and macOS"
authors = ["Sanscreates"]
homepage = "https://eaon.dev"
repository = "https://github.com/sanscreates/eaon-desktop"
license = "GPL-3.0-only"
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin so they don't
# collide on Windows (see rust-lang/cargo#8519).
name = "eaon_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "eaon"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# HTTP + streaming for the model backends (local Ollama / llama.cpp, and any
# OpenAI-compatible endpoint). rustls-tls (not the system OpenSSL/native-tls)
# so the build needs no C toolchain or OpenSSL — critical for a clean,
# reproducible Windows build.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
# Pure-Rust regex (no C deps) for the Agent's code search — keeps the
# Windows build toolchain-free, same reason as rustls above.
regex = "1"
# Attachment bytes cross the webview↔Rust IPC as base64 strings (binary
# JSON arrays would be 4-5x larger over the JSON IPC).
base64 = "0.22"
# The trash_item device tool — Recycle Bin on Windows, gio trash on Linux,
# Trash on macOS. Pure Rust, recoverable (never a permanent delete).
trash = "5"
# Async TCP for the Local API Server. The runtime itself is Tauri's (shared);
# these features just expose the socket + read/write types. No macros/rt-*
# features — we spawn via tauri::async_runtime, not a second runtime.
tokio = { version = "1", features = ["net", "io-util"] }

[dev-dependencies]
# Only for the streaming smoke-test example — never linked into the app.
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
# Smaller, faster binaries — matters most on Windows, where Tauri's whole
# advantage over Electron is a tiny footprint.
codegen-units = 1
lto = true
opt-level = "s"
strip = true
